# playground-ocaml

./: README.md  justfile
graphql_server/: dune-project
graphql_server/lib/: dune  server.ml
graphql_server/test/: dune
